# song2score

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: install_musescore.sh
song2score/: __init__.py  __main__.py  pipeline.py  types.py
song2score/audio/: __init__.py  preprocess.py
song2score/export/: __init__.py  musicxml.py
song2score/render/: __init__.py  musescore.py
song2score/separation/: __init__.py  classifier.py  demucs.py  refinement.py  strings.py
song2score/transcription/: __init__.py  basic_pitch.py  drums.py
