[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song2score"
version = "0.2.0"
description = "Convert mixed audio songs to separated parts, MIDI, and sheet music"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "song2score contributors"}
]
keywords = ["audio", "music", "transcription", "stem-separation", "midi", "musicxml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Audio processing
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    # MIDI processing
    "mido>=1.3.0",
    "pretty_midi>=0.2.10",
    # Music notation
    "music21>=9.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # Configuration
    "pyyaml>=6.0",
    # Progress bars
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Stem separation
demucs = ["demucs>=4.0.0"]
# Transcription
basic-pitch = ["basic-pitch>=1.0.0"]
# Drum transcription
madmom = ["madmom>=0.17.0"]
# Machine learning (for custom models)
torch = ["torch>=2.0.0", "torchvision>=0.15.0"]
# Development
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]

[project.scripts]
song2score = "song2score.__main__:cli"

[project.urls]
Homepage = "https://github.com/yourusername/song2score"
Repository = "https://github.com/yourusername/song2score"

[tool.setuptools.packages.find]
where = ["."]
include = ["song2score*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
